Module - 04 Completed by thennavan

--- a/index.html
+++ b/index.html
@@ -180,6 +180,57 @@
         <br>
         <br>
       </section>
+      <!-- Module - 4 -->
+      <section id="services">
+    <div class="header"></div>
+    <div class="header1">Final Touch</div>
+    <div class="header">Services</div>
+    <div class="services">
+        <div class="service-item"><b>Web Development</b></div>
+        <div class="service-item"><b>Mobile App Development</b></div>
+        <div class="service-item"><b>Designer</b></div>
+    </div>
+    <diV>
+     
+    <img
+     src="assets/serviceDesigner.svg"
+     alt="services-img-1"
+     width="400px";
+     
+  >
+    <img
+     src="assets/serviceMobDev.svg"
+     alt="services-img-2"
+     width="400px";
+>
+   <img
+    src="assets/serviceWebDev.svg"
+    alt="services-img-3"
+    width="400px";
+>
+</diV>
+<div>
+   
+   <p
+   class="para">
+    I Specialize in creating custom Websites, blending design and functionality.From responsive layouts to complex
+    back-end systems, I help the clients with required convenience.
+   </p>
+
+   <p
+   class="para">
+    I develop mobile applications for both IOS and Andriod, focusing on intuitive interfaces and ssmooth performance
+    I build apps that meet client needs offering user-centric features and reliable functionality.
+   </p>
+
+   <p
+   class="para">
+    As a designer, I craft unique and visually engaging designs.Whether its branding,web or graphic design,
+    I aim to deliver creative solutions that align wiht client goalS and leave a lasting impression.
+   </p>
+   </div>
+      </section>
     </main>
   </body>
 </html>
+<!-- End of Module - 4 -- Services -->
