--- a/index.html
+++ b/index.html
@@ -230,6 +230,32 @@
    </p>
    </div>
       </section>
+      <!-- Module - 05 -Footer/Contact -->
+      <footer id="contact">
+        <div class="footer-container">
+            <h2>Pro Lancer</h2>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Stories</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Services</a></li>
+                </ul>
+            </nav>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/yourprofile" target="_blank">
+                    <img src="./assets/footerInsta.png" alt="Instagram" width="32">
+                </a>
+                <a href="https://twitter.com/yourprofile" target="_blank">
+                    <img src="./assets/footerX.png" alt="X (Twitter)" width="32">
+                </a>
+                <a href="https://www.linkedin.com/in/yourprofile" target="_blank">
+                    <img src="./assets/footerLinkedin.png" alt="LinkedIn" width="32">
+                </a>
+            </div>
+            <p>© 2025 ProLancer. All Rights Reserved.</p>
+        </div>
+    </footer>
     </main>
   </body>
 </html>
